# Document-Loader

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PRECOMMIT.md  README.md  RetrievalQA_Implementation_Guide.md  RetrievalQA_README.md  SECURITY_IMPROVEMENTS.md  advanced_retrieval_qa.py  agents.py  demo_vector_store.json  embeddings.py  example_agents.py  file_vector_store.json  generate_test_data.py  long_test.txt  main.py  memory_test.txt  pyproject.toml  retrieval_qa.py  retrieval_qa_demo.py  retrieval_qa_evaluation.py  retrieval_qa_integration.py  run_tests.py  search_demo.py  search_engine.py  test.txt  test_agents.py  test_comprehensive.py  test_edge_cases.py  test_report.json  test_search_engine.py  text_splitter.py  vector_store.py  vector_store_analysis_report.md  vector_store_demo.py  vector_store_integration.py
test_data/: all_topics.txt  basic.txt  chinese.txt  code_snippets.txt  cybersecurity.txt  data_science.txt  encoding_test.txt  index.md  japanese.txt  javascript_code.txt  korean.txt  large_document.txt  long.txt  long_paragraph.txt  machine_learning.txt  medium.txt  mixed_content.txt  mixed_language.txt  multilingual.txt  python_code.txt  python_programming.txt  repeating_content.txt  simple.txt  single_line_long.txt  special_characters.txt  structured_data.txt  technical_documentation.txt  web_development.txt  whitespace.txt
