[project]
name = "document-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "pre-commit>=4.3.0",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "ruff>=0.12.11",
]
